20080102      Adding a section about GXemul being Free Software to intro.html               (same as in previous versions of GXemul).               Implementing CommandInterpreter::RunCommand, so that commands               can be executed. "help", "quit", and "version" work               interactively now :) 20080103      CTRL-A/E (for start/end of line) and CTRL-B/F (for back/               forward cursor movement) now work in the console UI.               Mapping ANSI/VTxxx/xterm cursor keys (escape + [ + misc) to               CTRL-A/E/B/F/N/P.               Adding command history support to the CommandInterpreter.               Classes that perform unit tests using the UNITTESTS(classname)               macro are now tested (almost) automagically by               UnitTest::RunTests(). (.h files must still be included.) 20080104      Connecting cursor up/down keys to the command history.               Adding Component::Clone. (Not really used yet.)               Adding CTRL-D support to the command interpreter (remove               character to the right).               Actions will now be placed in src/main/actions/.               Implementing an AddComponentAction. 20080105      Beginning on TAB completion in the CommandInterpreter.               Implementing the UndoCommand and the RedoCommand.               Adding CTRL-K (kill end of line) to the command interpreter.               Implementing RemoveComponentAction.

--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.12 2008-01-02 10:56:41 debug Exp $
+#  $Id: Makefile.skel,v 1.13 2008-01-05 13:13:50 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
@@ -12,18 +12,23 @@ OBJS=Action.o ActionStack.o Checksum.o \
 	debug_new.o EscapedString.o GXemul.o \
 	StateVariable.o StateVariableValue.o UnitTest.o
 
-all: $(OBJS) do_commands
+all: $(OBJS) do_actions do_commands
 
 $(OBJS): Makefile
+
+do_actions:
+	cd actions; $(MAKE); cd ..
 
 do_commands:
 	cd commands; $(MAKE); cd ..
 
 clean:
+	cd actions; $(MAKE) clean; cd ..
 	cd commands; $(MAKE) clean; cd ..
 	rm -f $(OBJS) *core _test
 
 clean_all: clean
+	cd actions; $(MAKE) clean_all; cd ..
 	cd commands; $(MAKE) clean_all; cd ..
 	rm -f Makefile
 
