--- a/gxemul-legacy/trunk/Makefile.skel
+++ b/gxemul-legacy/trunk/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.69 2008-01-02 10:56:40 debug Exp $
+#  $Id: Makefile.skel,v 1.70 2008-01-05 13:13:49 debug Exp $
 #
 #  Makefile for GXemul
 #
@@ -60,4 +60,5 @@ clean:
 clean_all: clean
 	cd experiments; $(MAKE) clean_all; cd ..
 	cd demos; $(MAKE) clean; cd ..
+	rm -f _unittests.tmp unittest.h
 	rm -f config.h Makefile src/Makefile src/*/Makefile src/*/*/Makefile
