20080120        Some minor OpenFirmware fixes: Adding a "memory" property to                 "/chosen", adding a dummy claim() service. 20080205        Switching order of DINCLUDE and XINCLUDE in                 src/devices/Makefile (thanks to Ning Zhao for the tip). 20080222        Adding a DEV_DISK_OFFSET_HIGH32 register, for reading/writing                 the top 32 bits of the offset register (useful for emulated                 32-bit archs), as suggested by Julian Elischer.

--- a/gxemul-legacy/branches/gxemul-0-4-6-1/src/devices/Makefile.skel
+++ b/gxemul-legacy/branches/gxemul-0-4-6-1/src/devices/Makefile.skel
@@ -1,10 +1,10 @@
 #
-#  $Id: Makefile.skel,v 1.147 2007-06-19 02:11:46 debug Exp $
+#  $Id: Makefile.skel,v 1.147.2.1 2008-02-24 05:43:17 debug Exp $
 #
 #  Makefile for GXemul devices
 #
 
-CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
+CFLAGS=$(CWARNINGS) $(COPTIM) $(DINCLUDE) $(XINCLUDE)
 OBJS=device.o bus_isa.o bus_pci.o lk201.o \
 	dev_8253.o dev_8259.o dev_adb.o dev_ahc.o dev_algor.o dev_asc.o \
 	dev_bebox.o dev_bt431.o dev_bt455.o dev_bt459.o dev_clmpcc.o \
