Huge commit, don't have the time or energy to split into multiple smaller ones. Comment from the HISTORY file:
> 		Creating a ComponentFactory; moving Component::CreateComponent
> 		to ComponentFactory::CreateComponent.
> 		Reworking how components are created, in preparation for
> 		getting "templates" (such as the testmips machine) to work.
> 		A list of Components is now generated by the configure script,
> 		so that all .h files with a COMPONENT(name) command in
> 		src/include/components/ (including template machines, etc) will
> 		be creatable using ComponentFactory::CreateComponent.
> 		The -E command line option now works :-)
> 20080113	Adding a "quiet mode" to the GXemul class, set to true by the
> 		-q command line option.
> 		Adding some more simple commands: continue, list-components.
> 20080118        [0.4.x branch]  Applying a WDC patch from Oleksandr Tymoshenko
> 		(dev_wdc.c and bus_pci.c), fixing the order of 16-bit words
> 		within 32-bit words in the identify struct, and not clearing
> 		the error on reads from the error register anymore.
> 		[0.4.x branch]  RELEASE 0.4.6.2
> 20080119	Adding a generic GetAttribute function to components. Planned
> 		attributes are "template", "stable", "machine", "description",
> 		and "contributors". Unimplemented attributes result in an empty
> 		string being returned from GetAttribute.
> 		Moving the ASCII tree generator from TreeCommand.cc to
> 		Component::GenerateTreeDump.
> 		Documentation of available machine templates and all components
> 		is now automagically generated on a "make documentation".
> 		(doc/machines.html and doc/components.html.)
> 20080120	[0.4.x branch]  Some minor OpenFirmware fixes: Adding a
> 		"memory" property to "/chosen", adding a dummy claim() service.
> 		Adding CTRL-W handling (remove current/last word) to the
> 		CommandInterpreter.
> 		The machines.html and components.html documentation pages now
> 		point to individual doc/machine_XXX.html and component_XXX.html
> 		pages, i

--- a/gxemul-legacy/trunk/Makefile.skel
+++ b/gxemul-legacy/trunk/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.71 2008-01-12 08:29:56 debug Exp $
+#  $Id: Makefile.skel,v 1.72 2008-03-12 11:45:40 debug Exp $
 #
 #  Makefile for GXemul
 #
@@ -14,13 +14,19 @@ all: build
 
 build:
 	cd src; $(MAKE); cd ..
-	$(CXX) $(COPTIM) src/components/*/*.o src/main/*.o src/main/*/*.o src/ui/*/*.o $(LIBS) -o $(BIN)
+	$(CXX) $(COPTIM) src/components/*/*.o src/ir/*.o src/main/*.o src/main/*/*.o src/ui/*/*.o $(LIBS) -o $(BIN)
 	ln -f $(BIN) $(BINGUI)
 
 test: build
 	./$(BIN) -W unittest > /dev/null
 
-documentation:
+documentation: build
+	sed s/PAGETITLE/Machines/g < doc/head.html > doc/machines.html
+	./$(BIN) -W machines >> doc/machines.html
+	cat doc/tail.html >> doc/machines.html
+	sed s/PAGETITLE/Components/g < doc/head.html > doc/components.html
+	./$(BIN) -W components >> doc/components.html
+	cat doc/tail.html >> doc/components.html
 	$(DOXYGEN) doc/Doxyfile
 
 install: test documentation
@@ -61,4 +67,5 @@ clean_all: clean
 	cd experiments; $(MAKE) clean_all; cd ..
 	cd demos; $(MAKE) clean; cd ..
 	rm -f _unittests.tmp unittest.h unittest_h.h commands.h commands_h.h
+	rm -f _components.tmp _commands.tmp components.h components_h.h
 	rm -f config.h Makefile src/Makefile src/*/Makefile src/*/*/Makefile
