--- a/gxemul-legacy/trunk/src/main/Makefile.skel
+++ b/gxemul-legacy/trunk/src/main/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.13 2008-01-05 13:13:50 debug Exp $
+#  $Id: Makefile.skel,v 1.14 2008-03-12 11:45:41 debug Exp $
 #
 #  Makefile for GXemul src/main
 #
@@ -8,9 +8,8 @@ CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE1)
 LIBS=$(XLIB) $(OTHERLIBS)
 
 OBJS=Action.o ActionStack.o Checksum.o \
-	Command.o CommandInterpreter.o Component.o \
-	debug_new.o EscapedString.o GXemul.o \
-	StateVariable.o StateVariableValue.o UnitTest.o
+	Command.o CommandInterpreter.o Component.o ComponentFactory.o \
+	debug_new.o EscapedString.o GXemul.o StateVariable.o UnitTest.o
 
 all: $(OBJS) do_actions do_commands
 
