--- a/gxemul-legacy/trunk/src/components/cpu/Makefile.skel
+++ b/gxemul-legacy/trunk/src/components/cpu/Makefile.skel
@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.1 2008-03-12 11:45:40 debug Exp $
+#  $Id: Makefile.skel,v 1.2 2008-03-14 12:12:15 debug Exp $
 #
 #  Makefile for GXemul src/components/cpu
 #
@@ -7,7 +7,7 @@
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE2)
 LIBS=$(XLIB) $(OTHERLIBS)
 
-OBJS=MIPS_CPUComponent.o
+OBJS=CPUComponent.o MIPS_CPUComponent.o
 
 all: $(OBJS)
 
