Creating a subdir (gxmvcf) for all "reusable" (i.e. non-unit-test) files; requiring gtkmm again, because glibmm makes libintl.h not appear in -I list...

--- a/gxmvcf/src/Makefile.skel
+++ b/gxmvcf/src/Makefile.skel
@@ -16,7 +16,7 @@ runtests: main.o $(OBJS)
 	./runtests
 
 clean:
-	rm -f $(OBJS) *core _test
+	rm -f $(OBJS) runtests *core _test
 
 clean_all: clean
 	rm -f Makefile
