--- a/gxmvcf/src/Makefile.skel
+++ b/gxmvcf/src/Makefile.skel
@@ -16,7 +16,7 @@ runtests: main.o $(OBJS)
 	./runtests
 
 clean:
-	rm -f $(OBJS) runtests *core _test
+	rm -f $(OBJS) runtests *core _test main.o
 
 clean_all: clean
 	rm -f Makefile
