--- a/gxmvcf/src/Makefile.skel
+++ b/gxmvcf/src/Makefile.skel
@@ -5,7 +5,7 @@
 CXXFLAGS=$(CXXFLAGSBASE) $(CPEDANTIC) $(INCLUDE1)
 LIBS=$(XLIB) $(OTHERLIBS)
 
-OBJS=debug_new.o Variable.o UnitTest.o
+OBJS=debug_new.o Node.o Variable.o UnitTest.o
 
 all: $(OBJS) main.o
 	$(CXX) $(CXXFLAGS) $(LIBS) main.o $(OBJS) -o runtests
