Continuing on native code generation: beginning on register allocation.

--- a/gxemul/trunk/src/ir/Makefile.skel
+++ b/gxemul/trunk/src/ir/Makefile.skel
@@ -5,7 +5,7 @@
 CXXFLAGS=$(CXXWARNINGS) $(CXXOPTIM) $(CPEDANTIC) $(INCLUDE1)
 LIBS=$(OTHERLIBS)
 
-OBJS=	IRBlockCache.o IRNativeAMD64.o
+OBJS=	IR.o IRBlockCache.o IRNativeAMD64.o
 
 all: $(OBJS) IRNative.o
 
