Beginning to separate debug messages into subsystems, that have individual verbosity levels. Making -K work more consistently (enter the debugger at the end of a run). -V implies -K. Making -T work better for M88K (breaking into the debugger directly on bad memory accesses, if -K is used).

--- a/gxemul/trunk/src/core/Makefile.skel
+++ b/gxemul/trunk/src/core/Makefile.skel
@@ -1,11 +1,11 @@
 #
-#  Makefile for GXemul src/old_main
+#  Makefile for GXemul src/core
 #
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
 
-OBJS=emul.o emul_parse.o float_emul.o interrupt.o main.o memory.o misc.o \
-	settings.o timer.o
+OBJS=debugmsg.o emul.o emul_parse.o float_emul.o interrupt.o main.o \
+	memory.o misc.o settings.o timer.o
 
 all: $(OBJS)
 
