--- a/gxemul/trunk/src/machines/Makefile.skel
+++ b/gxemul/trunk/src/machines/Makefile.skel
@@ -7,6 +7,7 @@ CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
 OBJS=	machine.o machine_algor.o machine_alpha.o \
 	machine_androidarm.o machine_arc.o \
 	machine_cats.o machine_cobalt.o machine_dreamcast.o machine_evbmips.o \
+	machine_hp700rx.o \
 	machine_hpcarm.o machine_hpcmips.o machine_hpcsh.o machine_iq80321.o \
 	machine_iyonix.o machine_landisk.o machine_luna88k.o machine_macppc.o \
 	machine_mvme88k.o machine_mvmeppc.o machine_netwinder.o \
