Refactoring of the breakpoint handling code; moving towards subsystem breakpoints. So far, -T is implemented as a breakpoint for the "memory" subsystem. Also rewriting some break-out-of-dyntrans constructs. Disassembly now includes arguments for function calls, when running. Generalizing the CTRL-T (SIGINFO) display code a bit. And some other minor fixes...

--- a/gxemul/trunk/src/core/Makefile.skel
+++ b/gxemul/trunk/src/core/Makefile.skel
@@ -4,8 +4,8 @@
 
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(DINCLUDE)
 
-OBJS=debugmsg.o emul.o emul_parse.o float_emul.o interrupt.o main.o \
-	memory.o misc.o settings.o timer.o
+OBJS=breakpoints.o debugmsg.o emul.o emul_parse.o float_emul.o interrupt.o \
+	main.o memory.o misc.o settings.o timer.o
 
 all: $(OBJS)
 
